package com.tetras;

public interface Requete {
    void afficher();
}