@startuml ServeurWeb
interface Requete {
     + afficher() :void   
}
class RequeteHttp {
    - requete : List<requete>
    + ajouter(requete): void
    + afficher(): void
    + exceptions(): void 
}

class URL {
     {static} - path: string
}
class Header {
     {static} - headers: String/string
}
class Body {
     {static} - content: string
}
class ServeurWeb {
     {static} + repondre(requête): Int
}

ServeurWeb -- RequeteHttp 
Requete <-- RequeteHttp : Design Pattern : Composite
RequeteHttp <|-- Requete
URLDangereux-->RequeteHttp
URLNull-->RequeteHttp
Requete <|-- Header
Requete <|-- Body
Requete <|-- URL

URLDangereux..|>URL : Design-pattern : Proxy
URLNull..|>URL

@enduml
